--- a/client/bower.json
+++ b/client/bower.json
@@ -2,10 +2,10 @@
   "name": "client",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.4.0",
+    "angular": "^1.3.0",
     "bootstrap-sass-official": "^3.2.0",
-    "angular-route": "^1.4.0",
-    "restangular": "^1.5.2"
+    "angular-route": "^1.3.0",
+    "restangular": "~1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
